Criação do fluxo de cadastro/listagem/deleção de propriedades; Criação do fluxo de casdastro/listagem/deleção de produtores

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,7 +82,6 @@
 <script type="text/javascript" src="app/src/controller/dashboardManager.js"></script>
 <script type="text/javascript" src="app/src/controller/insurerManager.js"></script>
 <script type="text/javascript" src="app/src/controller/brokerageManager.js"></script>
-<script type="text/javascript" src="app/src/controller/producerManager.js"></script>
 <script type="text/javascript" src="app/src/controller/userManager.js"></script>
 <script type="text/javascript" src="app/src/controller/appController.js"></script>
 
@@ -107,6 +106,13 @@
 <script type="text/javascript" src="app/src/module/property/controllers/property.search.js"></script>
 <script type="text/javascript" src="app/src/module/property/controllers/property.delete.js"></script>
 <script type="text/javascript" src="app/src/module/property/factory/property.factory.js"></script>
+
+<!-- Producer -->
+<script type="text/javascript" src="app/src/module/producer/producer.manager.js"></script>
+<script type="text/javascript" src="app/src/module/producer/controllers/producer.search.js"></script>
+<script type="text/javascript" src="app/src/module/producer/controllers/producer.delete.js"></script>
+<script type="text/javascript" src="app/src/module/producer/controllers/producer.create.js"></script>
+<script type="text/javascript" src="app/src/module/producer/controllers/producer.edit.js"></script>
 
 <!-- Filters -->
 <script type="text/javascript" src="app/src/filter/filters.js"></script>
