Iniciando implementações do cadastro de propostas, sendo utilizandas funções de autocomplete de produtor, seguradora e segurado; Criação de views para exibição dos detalhes dos ramos, ao selecionar o ramo, no cadastro da proposta; Criação da listagem de propostas; Iniciando implementação do save

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,6 +65,7 @@
 <script type="text/javascript" src="app/libs/ngMask.min.js"></script>
 <script type="text/javascript" src="app/libs/masks.js"></script>
 <script type="text/javascript" src="app/libs/v-button.js"></script>
+<script type="text/javascript" src="app/libs/moment.js"></script>
 
 <script type="text/javascript" src="app/libs/ui-bootstrap-tpls-0.12.0.min.js"></script>
 
@@ -139,7 +140,7 @@
 <script type="text/javascript" src="app/src/module/proposal/controllers/proposal.delete.js"></script>
 <script type="text/javascript" src="app/src/module/proposal/controllers/proposal.create.js"></script>
 <script type="text/javascript" src="app/src/module/proposal/controllers/proposal.edit.js"></script>
-
+<script type="text/javascript" src="app/src/module/proposal/factories/proposal.factory.js"></script>
 
 <!-- Utils -->
 <script type="text/javascript" src="app/src/module/utils/componentes/maskFactory.js"></script>
