Implementação da persistência de franquias da proposta (casco, faróis e vidro)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -142,6 +142,9 @@
 <script type="text/javascript" src="app/src/module/proposal/controllers/proposal.edit.js"></script>
 <script type="text/javascript" src="app/src/module/proposal/factories/proposal.factory.js"></script>
 
+<!-- Franchise -->
+<script type="text/javascript" src="app/src/module/franchise/factory/franchise.factory.js"></script>
+
 <!-- Utils -->
 <script type="text/javascript" src="app/src/module/utils/componentes/maskFactory.js"></script>
 <script type="text/javascript" src="app/src/module/utils/componentes/paginationFactory.js"></script>
